style: fixed letter spacing for h1

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -16,7 +16,7 @@
   }
 
   .background-light800_darkgradient {
-    @apply dark:dark-gradient bg-light-800;
+    @apply bg-light-800 dark:dark-gradient;
   }
 
   .background-light800_dark400 {
@@ -92,91 +92,91 @@
   }
 
   .light-border {
-    @apply border-light-800 dark:border-dark-300;
+    @apply dark:border-dark-300 border-light-800;
   }
 
   .light-border-2 {
-    @apply border-light-700 dark:border-dark-400 !important;
+    @apply dark:border-dark-400 border-light-700 !important;
   }
 
   .h1-bold {
-    @apply text-[30px] font-bold leading-[42px] tracking-tighter;
+    @apply font-bold text-[30px] leading-[42px] tracking-wide;
   }
 
   .h2-bold {
-    @apply text-[24px] font-bold leading-[31.2px];
+    @apply font-bold text-[24px] leading-[31.2px];
   }
 
   .h2-semibold {
-    @apply text-[24px] font-semibold leading-[31.2px];
+    @apply font-semibold text-[24px] leading-[31.2px];
   }
 
   .h3-bold {
-    @apply text-[20px] font-bold leading-[26px];
+    @apply font-bold text-[20px] leading-[26px];
   }
 
   .h3-semibold {
-    @apply text-[20px] font-semibold leading-[24.8px];
+    @apply font-semibold text-[20px] leading-[24.8px];
   }
 
   .base-medium {
-    @apply text-[18px] font-medium leading-[25.2px];
+    @apply font-medium text-[18px] leading-[25.2px];
   }
 
   .base-semibold {
-    @apply text-[18px] font-semibold leading-[25.2px];
+    @apply font-semibold text-[18px] leading-[25.2px];
   }
 
   .base-bold {
-    @apply text-[18px] font-bold leading-[140%];
+    @apply font-bold text-[18px] leading-[140%];
   }
 
   .paragraph-regular {
-    @apply text-[16px] font-normal leading-[22.4px];
+    @apply font-normal text-[16px] leading-[22.4px];
   }
 
   .paragraph-medium {
-    @apply text-[16px] font-medium leading-[22.4px];
+    @apply font-medium text-[16px] leading-[22.4px];
   }
 
   .paragraph-semibold {
-    @apply text-[16px] font-semibold leading-[20.8px];
+    @apply font-semibold text-[16px] leading-[20.8px];
   }
 
   .body-regular {
-    @apply text-[14px] font-normal leading-[19.6px];
+    @apply font-normal text-[14px] leading-[19.6px];
   }
 
   .body-medium {
-    @apply text-[14px] font-medium leading-[18.2px];
+    @apply font-medium text-[14px] leading-[18.2px];
   }
 
   .body-semibold {
-    @apply text-[14px] font-semibold leading-[18.2px];
+    @apply font-semibold text-[14px] leading-[18.2px];
   }
 
   .small-regular {
-    @apply text-[12px] font-normal leading-[15.6px];
+    @apply font-normal text-[12px] leading-[15.6px];
   }
 
   .small-medium {
-    @apply text-[12px] font-medium leading-[15.6px];
+    @apply font-medium text-[12px] leading-[15.6px];
   }
 
   .small-semibold {
-    @apply text-[12px] font-semibold leading-[15.6px];
+    @apply font-semibold text-[12px] leading-[15.6px];
   }
 
   .subtle-medium {
-    @apply text-[10px] font-medium leading-[13px] !important;
+    @apply font-medium text-[10px] leading-[13px] !important;
   }
 
   .subtle-regular {
-    @apply text-[10px] font-normal leading-[13px];
+    @apply font-normal text-[10px] leading-[13px];
   }
 
   .placeholder {
-    @apply placeholder:text-light-400 dark:placeholder:text-light-500;
+    @apply dark:placeholder:text-light-500 placeholder:text-light-400;
   }
 
   .invert-colors {
